src/main/java/com/example/demo/global/error/exception/SignUpException.java
//package com.example.demo.global.error.exception;
//
//import com.example.demo.global.error.ErrorCode;
//
//public class SignUpException extends BusinessException{
//    public SignupException(ErrorCode errorcode){
//        super(errorcode);
//    }
//}